Applying the subsurf modifier deletes the freestyle edge marks. #39839

Closed
opened 2014-04-22 11:16:40 +02:00 by Fazekas Laszlo · 9 comments
Member

System Information
Ubuntu 14.04 x86-64 NVidia

Blender Version
Broken: 2.70a
Worked: -

Short description of error
Applying the subsurf modifier deletes the freestyle edge marks of the mesh.

Exact steps for others to reproduce the error
In edit mode, mark one edge of the default cube as freestyle edge. Add a subdivision surface modifier to the stack. If you render it with freestyle enabled, you can see the mesh still has the marked (and subdivided) edge. It is also possible to see/set/clear this property in the edit mode. So the subsurf algorithm works fine on the freestyle marked edges. But after you apply the modifier, the freestyle marks are lost.

**System Information** Ubuntu 14.04 x86-64 NVidia **Blender Version** Broken: 2.70a Worked: - **Short description of error** Applying the subsurf modifier deletes the freestyle edge marks of the mesh. **Exact steps for others to reproduce the error** In edit mode, mark one edge of the default cube as freestyle edge. Add a subdivision surface modifier to the stack. If you render it with freestyle enabled, you can see the mesh still has the marked (and subdivided) edge. It is also possible to see/set/clear this property in the edit mode. So the subsurf algorithm works fine on the freestyle marked edges. But after you apply the modifier, the freestyle marks are lost.
Author
Member

Changed status to: 'Open'

Changed status to: 'Open'
Author
Member

Added subscriber: @totoro-4

Added subscriber: @totoro-4
Author
Member

So I digged into the source and found a makeshift solution to this problem. The problem is that during the creation of the new DerivedMesh, the CustomData layers are created as empty, but not copied from the original dm. A makeshift solution for just the freestyle edge mark is below (using the fact that the original splitted edges are at the end of the new table). I hope this helps, but I think this needs a more general solution.

source/blender/blenkernel/intern/subsurf_ccg.c
L3752+
...
ccgdm->dm.numVertData = vertNum;
ccgdm->dm.numEdgeData = edgeNum;
ccgdm->dm.numTessFaceData = faceNum;
ccgdm->dm.numLoopData = loopindex2;
ccgdm->dm.numPolyData = faceNum;

/* add new code from here */

ifdef WITH_FREESTYLE

     	{
	FreestyleEdge *dstFed= DM_get_edge_data_layer(&ccgdm->dm,CD_FREESTYLE_EDGE);
	FreestyleEdge *srcFed= DM_get_edge_data_layer(dm,CD_FREESTYLE_EDGE);

	if (dstFed && srcFed) {
		int	max= edgeNum - totedge * (edgeSize - 1);
		int	i;

		for(index= 0; index < totedge; index++) {
			   i= max;
			   max += (edgeSize - 1);

			   for(; i < max; i++)
			   	dstFed- [x]= srcFed[index];
		}
	}
}

endif

/* new code end */

/* All tessellated CD layers were updated! */
ccgdm->dm.dirty &= ~DM_DIRTY_TESS_CDLAYERS;
So I digged into the source and found a makeshift solution to this problem. The problem is that during the creation of the new DerivedMesh, the CustomData layers are created as empty, but not copied from the original dm. A makeshift solution for just the freestyle edge mark is below (using the fact that the original splitted edges are at the end of the new table). I hope this helps, but I think this needs a more general solution. source/blender/blenkernel/intern/subsurf_ccg.c L3752+ ... ccgdm->dm.numVertData = vertNum; ccgdm->dm.numEdgeData = edgeNum; ccgdm->dm.numTessFaceData = faceNum; ccgdm->dm.numLoopData = loopindex2; ccgdm->dm.numPolyData = faceNum; /* add new code from here */ # ifdef WITH_FREESTYLE ``` { ``` FreestyleEdge *dstFed= DM_get_edge_data_layer(&ccgdm->dm,CD_FREESTYLE_EDGE); FreestyleEdge *srcFed= DM_get_edge_data_layer(dm,CD_FREESTYLE_EDGE); if (dstFed && srcFed) { int max= edgeNum - totedge * (edgeSize - 1); int i; for(index= 0; index < totedge; index++) { i= max; max += (edgeSize - 1); for(; i < max; i++) dstFed- [x]= srcFed[index]; } } } # endif /* new code end */ /* All tessellated CD layers were updated! */ ccgdm->dm.dirty &= ~DM_DIRTY_TESS_CDLAYERS;

Added subscriber: @mont29

Added subscriber: @mont29
Tamito Kajiyama was assigned by Bastien Montagne 2014-04-23 16:26:08 +02:00

Tamito, this one is for you I think. :)

Tamito, this one is for you I think. :)

This issue was referenced by blender/blender-addons-contrib@3182c54da6

This issue was referenced by blender/blender-addons-contrib@3182c54da6fd2eb1b3b54781bb447a7bd51b553e

This issue was referenced by 3182c54da6

This issue was referenced by 3182c54da6fd2eb1b3b54781bb447a7bd51b553e

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Closed by commit 3182c54da6.

Closed by commit 3182c54da6.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#39839
No description provided.