Fix T39839: Applying the subsurf modifier deletes the freestyle edge marks